--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Pioneers - Unity in Diversity</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="hero">
         <nav class="navbar">
-            <div class="logo">Pixel Pioneers</div>
+            <div class="logo"><a href="">Pixel Pioneers</a></div>
             <div class="nav-toggle" id="navToggle">
                 <span></span>
                 <span></span>
