Complete Hero Section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="hero">
         <nav class="navbar">
             <div class="logo"><a href="">Pixel Pioneers</a></div>
-            <div class="nav-toggle" id="navToggle">
+            <div class="nav-toggle">
                 <span></span>
                 <span></span>
                 <span></span>
