--- a/index.html
+++ b/index.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pakistan - Unity in Diversity</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="./images/icon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header class="hero">
+
         <nav class="navbar">
             <div class="logo"><a href="">Pixel Pioneers</a></div>
+
             <div class="nav-toggle">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
+
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#festivals">Festivals</a></li>
                 <li><a href="#architecture">Architecture</a></li>
                 <li><a href="#culture">Culture</a></li>
                 <li><a href="#linguistics">Linguistics</a></li>
             </ul>
+
         </nav>
+
         <div class="hero-content">
             <h1 class="title">Unity in Diversity</h1>
-            <p class="subtitle">Celebrating Pakistan's Rich Heritage</p>
-            <a href="#explore" class="cta-button">Explore Our Culture</a>
+            <p class="subtitle">Celebrating Our Rich Heritage</p>
+            <a href="#explore" class="cta-button">Explore Pakistan</a>
         </div>
+
         <div class="hero-background">
             <div class="circle circle-1"></div>
             <div class="circle circle-2"></div>
@@ -38,10 +48,51 @@
             <div class="star star-2"></div>
             <div class="star star-3"></div>
         </div>
+
         <div class="scroll-indicator">
             <div class="mouse"></div>
         </div>
+
     </header>
+
+
+    <section id="festivals" class="festivals-section">
+        <h2 class="section-title">Vibrant Festivals</h2>
+        <div class="festival-container">
+            <div class="festival-card">
+                <div class="festival-image">
+                    <img src="./images/eid.jpg" alt="Eid celebration">
+                </div>
+                <div class="festival-content">
+                    <h3>Eid-ul-Fitr</h3>
+                    <p>A joyous celebration marking the end of Ramadan, filled with prayers, feasts, and family
+                        gatherings.</p>
+                </div>
+            </div>
+            <div class="festival-card">
+                <div class="festival-image">
+                    <img src="./images/basant.jpg" alt="Basant kite festival">
+                </div>
+                <div class="festival-content">
+                    <h3>Basant</h3>
+                    <p>A vibrant kite-flying festival welcoming spring, painting the skies with colorful kites.</p>
+                </div>
+            </div>
+            <div class="festival-card">
+                <div class="festival-image">
+                    <img src="./images/independence.jpg" alt="Independence Day celebration">
+                </div>
+                <div class="festival-content">
+                    <h3>Independence Day</h3>
+                    <p>A patriotic celebration of Pakistan's independence, featuring flag-hoisting ceremonies and
+                        cultural events.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <script src="script.js"></script>
 </body>
+
 </html>
