--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pakistan - Unity in Diversity</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./festivals.css">
+
     <link rel="icon" href="./images/icon.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap"
@@ -60,6 +64,7 @@
     </header>
 
 
+    <!-- Festivals Section. -->
     <section id="festivals" class="festivals-section">
         <h2 class="section-title">Vibrant Festivals</h2>
         <div class="festival-container">
