--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./architecture.css">
     <link rel="stylesheet" href="./culture.css">
     <link rel="stylesheet" href="./linguistics.css">
+    <link rel="stylesheet" href="./footer.css">
 
     <link rel="icon" href="./images/icon.png">
     <link
@@ -398,6 +399,54 @@
           </div>
 
       </section>
+
+
+
+<!-- Footer Section -->
+<footer class="footer">
+  <div class="footer-content">
+    <div class="footer-section about">
+      <h3>About Us</h3>
+      <p>We are a dynamic duo passionate about celebrating Pakistan's rich heritage through innovative web design.</p>
+      <div class="contact-info">
+        <a href="mailto:haseebamjad.dev@gmail.com"><p><i class="fas fa-envelope"></i> haseebamjad.dev@gmail.com</p></a>
+      </div>
+      <div class="social-links">
+        <a href="https://linkedin.com/in/devhaseeb" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/webdev-haseeb" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://your-portfolio-website.com" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+      </div>
+    </div>
+    
+    <div class="footer-section team">
+      <h3>Our Team</h3>
+
+      <div class="team-member">
+        <img src="./images/haseeb-pfp.jpg" alt="M. Haseeb Amjad">
+        <div class="member-info">
+          <h4>M. Haseeb Amjad</h4>
+          <p>Team Lead & Front-end Developer</p>
+          <p>COMSATS University Islamabad</p>
+        </div>
+      </div>
+      
+      <div class="team-member">
+        <img src="./images/amna-pfp.jpg" alt="Amna Waqar">
+        <div class="member-info">
+          <h4>Amna Waqar</h4>
+          <p>Frontend Designer/Developer</p>
+          <p>National University of Modern Languages</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  
+  <div class="footer-bottom">
+    <p>&copy; 2024 Pixel Pioneers. All rights reserved.</p>
+    <p>Designed with <i class="fas fa-heart"></i> by M. Haseeb Amjad & Amna Waqar</p>
+  </div>
+</footer>
 
 
     <script src="script.js"></script>
