--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
       <div class="social-links">
         <a href="https://linkedin.com/in/devhaseeb" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/webdev-haseeb" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://your-portfolio-website.com" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+        <a href="https://webdev-haseeb.github.io/Portfolio/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
       </div>
     </div>
     
