Add anthem part

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./culture.css">
     <link rel="stylesheet" href="./linguistics.css">
     <link rel="stylesheet" href="./footer.css">
+    <link rel="stylesheet" href="./anthem.css">
 
     <link rel="icon" href="./images/icon.png">
     <link
@@ -413,129 +414,167 @@
 
 
     <!-- Linguistics Section -->
-<section id="linguistics" class="linguistics-section">
-    <h2 class="section-title" data-aos="fade-up">Linguistic</h2>
+    <section id="linguistics" class="linguistics-section">
+        <h2 class="section-title" data-aos="fade-up">Linguistic</h2>
 
-    <div class="language-showcase" data-aos="fade-up">
-        <div class="language-wheel">
-            <div class="language-item" style="--rotation: 0deg;">
-                <span class="language-name">Urdu</span>
-                <span class="language-script">اردو</span>
-            </div>
-            <div class="language-item" style="--rotation: 60deg;">
-                <span class="language-name">Punjabi</span>
-                <span class="language-script">پنجابی</span>
-            </div>
-            <div class="language-item" style="--rotation: 120deg;">
-                <span class="language-name">Sindhi</span>
-                <span class="language-script">سنڌي</span>
-            </div>
-            <div class="language-item" style="--rotation: 180deg;">
-                <span class="language-name">Pashto</span>
-                <span class="language-script">پښتو</span>
-            </div>
-            <div class="language-item" style="--rotation: 240deg;">
-                <span class="language-name">Balochi</span>
-                <span class="language-script">بلوچی</span>
-            </div>
-            <div class="language-item" style="--rotation: 300deg;">
-                <span class="language-name">Saraiki</span>
-                <span class="language-script">سرائیکی</span>
+        <div class="language-showcase" data-aos="fade-up">
+            <div class="language-wheel">
+                <div class="language-item" style="--rotation: 0deg;">
+                    <span class="language-name">Urdu</span>
+                    <span class="language-script">اردو</span>
+                </div>
+                <div class="language-item" style="--rotation: 60deg;">
+                    <span class="language-name">Punjabi</span>
+                    <span class="language-script">پنجابی</span>
+                </div>
+                <div class="language-item" style="--rotation: 120deg;">
+                    <span class="language-name">Sindhi</span>
+                    <span class="language-script">سنڌي</span>
+                </div>
+                <div class="language-item" style="--rotation: 180deg;">
+                    <span class="language-name">Pashto</span>
+                    <span class="language-script">پښتو</span>
+                </div>
+                <div class="language-item" style="--rotation: 240deg;">
+                    <span class="language-name">Balochi</span>
+                    <span class="language-script">بلوچی</span>
+                </div>
+                <div class="language-item" style="--rotation: 300deg;">
+                    <span class="language-name">Saraiki</span>
+                    <span class="language-script">سرائیکی</span>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="language-info" data-aos="fade-up">
-        <h3>Unity in Linguistic Diversity</h3>
-        <p>Pakistan's rich tapestry of languages reflects its cultural diversity and historical legacy. From the
-            national language Urdu to the provincial languages and numerous dialects, each contributes to the unique
-            identity of Pakistan.</p>
-    </div>
+        <div class="language-info" data-aos="fade-up">
+            <h3>Unity in Linguistic Diversity</h3>
+            <p>Pakistan's rich tapestry of languages reflects its cultural diversity and historical legacy. From the
+                national language Urdu to the provincial languages and numerous dialects, each contributes to the unique
+                identity of Pakistan.</p>
+        </div>
 
-    <div class="language-features" data-aos="fade-up">
-        <div class="feature-item">
-            <i class="fas fa-book"></i>
-            <h4>70+ Languages</h4>
-            <p>Pakistan is home to over 70 languages, showcasing its incredible linguistic diversity.</p>
+        <div class="language-features" data-aos="fade-up">
+            <div class="feature-item">
+                <i class="fas fa-book"></i>
+                <h4>70+ Languages</h4>
+                <p>Pakistan is home to over 70 languages, showcasing its incredible linguistic diversity.</p>
+            </div>
+            <div class="feature-item">
+                <i class="fas fa-comments"></i>
+                <h4>Urdu: Lingua Franca</h4>
+                <p>Urdu serves as a unifying language, understood and spoken across the nation.</p>
+            </div>
+            <div class="feature-item">
+                <i class="fas fa-globe"></i>
+                <h4>Regional Identity</h4>
+                <p>Each major language represents a unique regional culture and heritage.</p>
+            </div>
         </div>
-        <div class="feature-item">
-            <i class="fas fa-comments"></i>
-            <h4>Urdu: Lingua Franca</h4>
-            <p>Urdu serves as a unifying language, understood and spoken across the nation.</p>
-        </div>
-        <div class="feature-item">
-            <i class="fas fa-globe"></i>
-            <h4>Regional Identity</h4>
-            <p>Each major language represents a unique regional culture and heritage.</p>
-        </div>
-    </div>
 
-    <div class="linguistics-interactive" data-aos="fade-up">
-        <h3>Explore Language Regions</h3>
-        <div class="linguistics-region-tabs">
-            <button class="linguistics-region-tab active" data-region="punjab">Punjab</button>
-            <button class="linguistics-region-tab" data-region="sindh">Sindh</button>
-            <button class="linguistics-region-tab" data-region="kpk">KPK</button>
-            <button class="linguistics-region-tab" data-region="balochistan">Balochistan</button>
-            <button class="linguistics-region-tab" data-region="gilgit">Gilgit-Baltistan</button>
-        </div>
-        <div class="region-content">
+        <div class="linguistics-interactive" data-aos="fade-up">
+            <h3>Explore Language Regions</h3>
+            <div class="linguistics-region-tabs">
+                <button class="linguistics-region-tab active" data-region="punjab">Punjab</button>
+                <button class="linguistics-region-tab" data-region="sindh">Sindh</button>
+                <button class="linguistics-region-tab" data-region="kpk">KPK</button>
+                <button class="linguistics-region-tab" data-region="balochistan">Balochistan</button>
+                <button class="linguistics-region-tab" data-region="gilgit">Gilgit-Baltistan</button>
+            </div>
+            <div class="region-content">
 
-            <div class="linguistics-region-info active" id="punjab-info">
-                <h4>Punjab: The Land of Five Rivers</h4>
-                <p>Primary Language: Punjabi</p>
-                <p>Punjabi is the most widely spoken language in Punjab, known for its rich poetry, folk music, and
-                    expressive culture.</p>
-                <div class="language-sample">
-                    <span class="sample-text">اللہ دا شکر ہے</span>
-                    <span class="sample-translation">"Allah da Shukar hai" (Thank God)</span>
+                <div class="linguistics-region-info active" id="punjab-info">
+                    <h4>Punjab: The Land of Five Rivers</h4>
+                    <p>Primary Language: Punjabi</p>
+                    <p>Punjabi is the most widely spoken language in Punjab, known for its rich poetry, folk music, and
+                        expressive culture.</p>
+                    <div class="language-sample">
+                        <span class="sample-text">اللہ دا شکر ہے</span>
+                        <span class="sample-translation">"Allah da Shukar hai" (Thank God)</span>
+                    </div>
+                </div>
+
+                <div class="linguistics-region-info" id="sindh-info">
+                    <h4>Sindh: The Land of Sufis</h4>
+                    <p>Primary Language: Sindhi</p>
+                    <p>Sindhi is deeply rooted in the culture of Sindh, with its ancient script and connection to Sufi
+                        traditions.</p>
+                    <div class="language-sample">
+                        <span class="sample-text">اڇو ڀلو</span>
+                        <span class="sample-translation">"Achho Bhilo" (It's alright)</span>
+                    </div>
+                </div>
+
+                <div class="linguistics-region-info" id="balochistan-info">
+                    <h4>Balochistan: The Land of Mountains</h4>
+                    <p>Primary Language: Balochi</p>
+                    <p>Balochi is the main language spoken in Balochistan, known for its poetic traditions and strong
+                        oral history.</p>
+                    <div class="language-sample">
+                        <span class="sample-text">مارا جانا ھئی</span>
+                        <span class="sample-translation">"Mara Jana Hai" (I want to go)</span>
+                    </div>
+                </div>
+
+                <div class="linguistics-region-info" id="kpk-info">
+                    <h4>Khyber Pakhtunkhwa: The Land of the Brave</h4>
+                    <p>Primary Language: Pashto</p>
+                    <p>Pashto, the language of the Pashtuns, is known for its rich poetic traditions and strong emphasis
+                        on honor and hospitality.</p>
+                    <div class="language-sample">
+                        <span class="sample-text">زہ چہ رنگے یم؟</span>
+                        <span class="sample-translation">"Za Cha Ranga Yam?" (How am I?)</span>
+                    </div>
+                </div>
+
+                <div class="linguistics-region-info" id="gilgit-info">
+                    <h4>Gilgit-Baltistan: The Roof of the World</h4>
+                    <p>Primary Language: Shina</p>
+                    <p>Shina is widely spoken in Gilgit-Baltistan, known for its ancient origins and beautiful,
+                        mountainous dialect.</p>
+                    <div class="language-sample">
+                        <span class="sample-text">پھلیے ہو</span>
+                        <span class="sample-translation">"Phuliye Ho" (Are you well?)</span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="national-anthem-section">
+            <h2 class="anthem-title" data-aos="fade-up">National Anthem Experience</h2>
+
+            <div class="anthem-container" data-aos="fade-up">
+                <div class="anthem-player">
+                    <button id="playPauseBtn" class="play-pause-btn">
+                        <i class="fas fa-play"></i>
+                    </button>
+                    <div class="progress-bar-container">
+                        <div id="progressBar" class="progress-bar"></div>
+                    </div>
+                </div>
+
+                <div class="lyrics-container">
+                    <div class="lyrics original">
+                        <h3>Original (Persian)</h3>
+                        <p id="urduLyrics"></p>
+                    </div>
+                    <div class="lyrics translation">
+                        <h3>English Translation</h3>
+                        <p id="englishLyrics"></p>
+                    </div>
                 </div>
             </div>
 
-            <div class="linguistics-region-info" id="sindh-info">
-                <h4>Sindh: The Land of Sufis</h4>
-                <p>Primary Language: Sindhi</p>
-                <p>Sindhi is deeply rooted in the culture of Sindh, with its ancient script and connection to Sufi traditions.</p>
-                <div class="language-sample">
-                    <span class="sample-text">اڇو ڀلو</span>
-                    <span class="sample-translation">"Achho Bhilo" (It's alright)</span>
-                </div>
+            <div class="anthem-info" data-aos="fade-up">
+                <h3>Pak Sarzamin (پاک سرزمین)</h3>
+                <p>Pakistan's national anthem, known as "Pak Sarzamin" (The Sacred Land), was written by Hafeez
+                    Jalandhari and composed by Ahmed G. Chagla in 1952. It represents the unity, faith, and discipline
+                    of the nation.</p>
             </div>
-
-            <div class="linguistics-region-info" id="balochistan-info">
-                <h4>Balochistan: The Land of Mountains</h4>
-                <p>Primary Language: Balochi</p>
-                <p>Balochi is the main language spoken in Balochistan, known for its poetic traditions and strong oral history.</p>
-                <div class="language-sample">
-                    <span class="sample-text">مارا جانا ھئی</span>
-                    <span class="sample-translation">"Mara Jana Hai" (I want to go)</span>
-                </div>
-            </div>
-
-            <div class="linguistics-region-info" id="kpk-info">
-                <h4>Khyber Pakhtunkhwa: The Land of the Brave</h4>
-                <p>Primary Language: Pashto</p>
-                <p>Pashto, the language of the Pashtuns, is known for its rich poetic traditions and strong emphasis on honor and hospitality.</p>
-                <div class="language-sample">
-                    <span class="sample-text">زہ چہ رنگے یم؟</span>
-                    <span class="sample-translation">"Za Cha Ranga Yam?" (How am I?)</span>
-                </div>
-            </div>
-
-            <div class="linguistics-region-info" id="gilgit-info">
-                <h4>Gilgit-Baltistan: The Roof of the World</h4>
-                <p>Primary Language: Shina</p>
-                <p>Shina is widely spoken in Gilgit-Baltistan, known for its ancient origins and beautiful, mountainous dialect.</p>
-                <div class="language-sample">
-                    <span class="sample-text">پھلیے ہو</span>
-                    <span class="sample-translation">"Phuliye Ho" (Are you well?)</span>
-                </div>
-            </div>
-
         </div>
-    </div>
-</section>
 
+    </section>
 
 
 
